--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: NODE_ENV=development BASE_URL=/pulp-ui-2/ npm run build
+        run: NODE_ENV=development BASE_URL=/pulp-ui-2/ MOCK=on npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
